gs/base/gxi12bit.c
@@ -113,6 +113,8 @@ static irender_proc(image_render_icc16); /* icc 16bit case */
 irender_proc_t
 gs_image_class_2_fracs(gx_image_enum * penum)
 {
+    bool std_cmap_procs;
+
     if (penum->bps > 8) {
 	if (penum->use_mask_color) {
 	    /* Convert color mask values to fracs. */
@@ -122,9 +124,14 @@ gs_image_class_2_fracs(gx_image_enum * penum)
 		penum->mask_color.values[i] =
 		    bits2frac(penum->mask_color.values[i], 12);
 	}
+        /* If the device has some unique color mapping procs due to its color space,
+           then we will need to use those and go through pixel by pixel instead
+           of blasting through buffers.  This is true for example with many of 
+           the color spaces for CUPs */
+        std_cmap_procs = gx_device_uses_std_cmap_procs(penum->dev);
         if ( (gs_color_space_get_index(penum->pcs) == gs_color_space_index_DeviceN &&
             penum->pcs->cmm_icc_profile_data == NULL) || penum->use_mask_color || 
-            penum->bps != 16 || 
+            penum->bps != 16 || !std_cmap_procs ||
             gs_color_space_get_index(penum->pcs) == gs_color_space_index_DevicePixel) { 
             /* DevicePixel color space used in mask from 3x type.  Basically
                a simple color space that just is scaled to the device bit 
