gs/base/gxiscale.c
@@ -104,6 +104,13 @@ gs_image_class_0_interpolate(gx_image_enum * penum)
         != penum->dev->color_info.num_components) {
         use_icc = false;
     }
+    /* If the device has some unique color mapping procs due to its color space,
+       then we will need to use those and go through pixel by pixel instead
+       of blasting through buffers.  This is true for example with many of 
+       the color spaces for CUPs */
+    if(!gx_device_uses_std_cmap_procs(penum->dev)) {
+        use_icc = false;
+    }
 /*
  * USE_CONSERVATIVE_INTERPOLATION_RULES is normally NOT defined since
  * the MITCHELL digital filter seems OK as long as we are going out to
